--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "ronaldo-avalos-dev",
+  "homepage": "https://ronaldo-avalos.github.io/my-portfolio/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,6 +15,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.479.0",
     "next": "15.1.0",
     "react": "^19.0.0",
